// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignatureRequestHeader renders correctly with fromAccount 1`] = `
<div>
  <div
    class="signature-request-header"
  >
    <div
      class="signature-request-header--account"
    >
      <div
        class="account-list-item undefined"
        data-testid="account-list-item"
      >
        <div
          class="account-list-item__top-row"
        >
          <div
            class=""
          >
            <div
              class="identicon account-list-item__identicon"
              style="height: 18px; width: 18px; border-radius: 9px;"
            >
              <div
                style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 18px; height: 18px; display: inline-block; background: rgb(24, 151, 242);"
              >
                <svg
                  height="18"
                  width="18"
                  x="0"
                  y="0"
                >
                  <rect
                    fill="#2362E1"
                    height="18"
                    transform="translate(2.018998228945791 -3.0005497255688565) rotate(458.4 9 9)"
                    width="18"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F94301"
                    height="18"
                    transform="translate(-8.641945850428243 4.495697794961231) rotate(268.8 9 9)"
                    width="18"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#FA7900"
                    height="18"
                    transform="translate(-5.10539291960705 16.582508932884398) rotate(117.3 9 9)"
                    width="18"
                    x="0"
                    y="0"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="account-list-item__account-name"
          >
            0x
          </div>
        </div>
      </div>
    </div>
    <div
      class="signature-request-header--network"
    >
      <div
        class="mm-box mm-picker-network mm-box--padding-right-4 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--align-items-center mm-box--background-color-transparent mm-box--rounded-pill mm-box--border-color-border-muted box--border-style-solid box--border-width-1"
        data-testid="network-display"
        datatestid="network-display"
      >
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-picker-network__avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
        >
          g
        </div>
        <p
          class="mm-box mm-text mm-text--body-sm mm-text--ellipsis mm-box--color-text-default"
        >
          goerli
        </p>
        <span
          class="mm-box mm-picker-network__arrow-down-icon mm-icon mm-icon--size-xs mm-box--display-none mm-box--color-icon-default"
          style="mask-image: url('./images/icons/arrow-down.svg');"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SignatureRequestHeader renders correctly without fromAccount 1`] = `
<div>
  <div
    class="signature-request-header"
  >
    <div
      class="signature-request-header--account"
    />
    <div
      class="signature-request-header--network"
    >
      <div
        class="mm-box mm-picker-network mm-box--padding-right-4 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--align-items-center mm-box--background-color-transparent mm-box--rounded-pill mm-box--border-color-border-muted box--border-style-solid box--border-width-1"
        data-testid="network-display"
        datatestid="network-display"
      >
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-picker-network__avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
        >
          g
        </div>
        <p
          class="mm-box mm-text mm-text--body-sm mm-text--ellipsis mm-box--color-text-default"
        >
          goerli
        </p>
        <span
          class="mm-box mm-picker-network__arrow-down-icon mm-icon mm-icon--size-xs mm-box--display-none mm-box--color-icon-default"
          style="mask-image: url('./images/icons/arrow-down.svg');"
        />
      </div>
    </div>
  </div>
</div>
`;
